deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: jenkins
  labels:
    role: app
spec:
  replicas: 2
  selector:
    matchLabels:
      role: app
  template:
    metadata:
      labels:
        role: app
    spec:
      serviceAccountName: myaccount
      containers:
      - name: app
        image: image_id
        resources:
          requests:
            cpu: 10m
