service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    role: app
    version: "1.0"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
